test/Fail/InvalidNamePartKeyword.agda
test = forall _let_ → Set
